--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,36 +1,28 @@
-version: 2
+version: "2"
 
 run:
-  timeout: 5m
-  tests: true
   modules-download-mode: readonly
+  tests: true
 
 linters:
   enable:
-    # Default linters
-    - errcheck      # Check for unchecked errors
-    - govet         # Reports suspicious constructs
-    - ineffassign   # Detect ineffectual assignments
-    - staticcheck   # Advanced static analysis (includes gosimple checks)
-    - unused        # Detect unused constants, variables, functions
-
-    # Additional recommended linters
-    - misspell      # Detect commonly misspelled English words
-    - revive        # Fast, configurable, extensible, flexible, and beautiful linter for Go
-    - unconvert     # Remove unnecessary type conversions
-    - unparam       # Detect unused function parameters
-    - gosec         # Security-focused linter
+    # Default linters (errcheck, govet, ineffassign, staticcheck, unused are enabled by default)
     - bodyclose     # Check if HTTP response body is closed
-    - noctx         # Detect sending http request without context.Context
-    - gocritic      # Comprehensive diagnostic linter
-    - gocyclo       # Detect cyclomatic complexity
+    - copyloopvar   # Detect loop variable issues in Go 1.22+
     - dupl          # Detect code cloning
     - errorlint     # Find code that will cause problems with error wrapping
     - exhaustive    # Check exhaustiveness of enum switch statements
-    - copyloopvar   # Detect loop variable issues in Go 1.22+
     - goconst       # Find repeated strings that could be replaced by constants
+    - gocritic      # Comprehensive diagnostic linter
+    - gocyclo       # Detect cyclomatic complexity
     - goprintffuncname # Check that printf-like functions are named with f at the end
+    - gosec         # Security-focused linter
+    - misspell      # Detect commonly misspelled English words
+    - noctx         # Detect sending http request without context.Context
     - predeclared   # Find code that shadows predeclared identifiers
+    - revive        # Fast, configurable, extensible, flexible, and beautiful linter for Go
+    - unconvert     # Remove unnecessary type conversions
+    - unparam       # Detect unused function parameters
     - whitespace    # Detect leading/trailing whitespace
 
   disable:
@@ -42,86 +34,85 @@ linters:
     - gochecknoglobals # Globals are sometimes necessary
     - paralleltest  # Not always needed
 
+  settings:
+    errcheck:
+      check-type-assertions: true
+      check-blank: false  # Allow _ = f.Close() patterns for intentional discards
+      exclude-functions:
+        - (io.Closer).Close
+
+    govet:
+      enable-all: true
+      disable:
+        - shadow          # Too strict for now
+        - fieldalignment  # Struct field reordering hurts readability for marginal memory savings
+        - unusedwrite     # False positives on struct fields used through the containing struct
+
+    gocyclo:
+      min-complexity: 15
+
+    dupl:
+      threshold: 100
+
+    goconst:
+      min-len: 3
+      min-occurrences: 3
+
+    misspell:
+      locale: US
+
+    revive:
+      rules:
+        - name: unused-parameter
+          disabled: true  # unparam handles this better
+        - name: var-naming
+          disabled: false
+        - name: exported
+          disabled: false
+
+    gosec:
+      excludes:
+        - G204  # Subprocess with variable - needed for package managers
+        - G304  # File path provided as taint input - needed for config files
+
+  exclusions:
+    generated: lax
+    rules:
+      # Exclude some linters from running on tests
+      - path: _test\.go
+        linters:
+          - dupl
+          - gosec
+          - goconst
+          - errcheck      # Tests often intentionally ignore errors
+          - gocyclo       # Test functions can be complex
+          - funlen        # Test functions can be long
+
+      # Allow globals in main.go
+      - path: cmd/tidydots/main\.go
+        linters:
+          - gochecknoglobals
+
+      # TUI code can have complex view functions
+      - path: internal/tui/
+        linters:
+          - gocyclo       # View rendering functions can be complex
+          - gocritic      # Style suggestions for TUI code
+          - exhaustive    # UI code doesn't need all enum cases handled
+          - dupl          # Form navigation logic has acceptable duplication
+
+      # Allow G301 for config directories (0755 is standard)
+      - text: "G301: Expect directory permissions to be 0750 or less"
+        linters:
+          - gosec
+
+issues:
+  max-issues-per-linter: 0
+  max-same-issues: 0
+
 formatters:
   enable:
     - gofmt         # Check whether code is gofmt-formatted
     - goimports     # Check import statements are formatted well
-
-linters-settings:
-  errcheck:
-    check-type-assertions: true
-    check-blank: true
-    exclude-functions:
-      - (io.Closer).Close
-
-  govet:
-    enable-all: true
-    disable:
-      - shadow  # Too strict for now
-
-  gocyclo:
-    min-complexity: 15
-
-  dupl:
-    threshold: 100
-
-  goconst:
-    min-len: 3
-    min-occurrences: 3
-
-  misspell:
-    locale: US
-
-  revive:
-    rules:
-      - name: unused-parameter
-        disabled: true  # unparam handles this better
-      - name: var-naming
-        disabled: false
-      - name: exported
-        disabled: false
-
-  gosec:
-    excludes:
-      - G204  # Subprocess with variable - needed for package managers
-      - G304  # File path provided as taint input - needed for config files
-
-issues:
-  exclude-use-default: false
-  max-issues-per-linter: 0
-  max-same-issues: 0
-
-  exclude-rules:
-    # Exclude some linters from running on tests
-    - path: _test\.go
-      linters:
-        - dupl
-        - gosec
-        - goconst
-        - errcheck      # Tests often intentionally ignore errors
-        - gocyclo       # Test functions can be complex
-        - funlen        # Test functions can be long
-
-    # Allow globals in main.go
-    - path: cmd/tidydots/main\.go
-      linters:
-        - gochecknoglobals
-
-    # TUI code can have complex view functions
-    - path: internal/tui/
-      linters:
-        - gocyclo       # View rendering functions can be complex
-        - gocritic      # Style suggestions for TUI code
-        - exhaustive    # UI code doesn't need all enum cases handled
-        - dupl          # Form navigation logic has acceptable duplication
-
-    # Allow G301 for config directories (0755 is standard)
-    - text: "G301: Expect directory permissions to be 0750 or less"
-      linters:
-        - gosec
-
-output:
-  format: colored-line-number
-  print-issued-lines: true
-  print-linter-name: true
-  sort-results: true
+  exclusions:
+    generated: lax
