--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,3 +48,12 @@ jobs:
         with:
           file: ./coverage.out
           fail_ci_if_error: false
+
+  goreleaser-check:
+    name: GoReleaser Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - uses: goreleaser/goreleaser-action@v6
+        with:
+          args: check
