--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: AntoineGS <antoinegaudreau@users.noreply.github.com>
+# Maintainer: AntoineGS <antoineg.simard at gmail dot com>
 pkgname=tidydots-bin
 pkgver=PKGVER_PLACEHOLDER
 pkgrel=1
